--- a/FoodStore.Data/FoodStore.Data.csproj
+++ b/FoodStore.Data/FoodStore.Data.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.15" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\FoodStore.GCommon\FoodStore.GCommon.csproj" />
+    <ProjectReference Include="..\FoodStore.Data.Models\FoodStore.Data.Models.csproj" />
+  </ItemGroup>
+
 </Project>
