--- a/FoodStore/appsettings.json
+++ b/FoodStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAFTOP;Database=FoodStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAFTOP;Database=FoodStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
