Added scaffolded identity

--- a/FoodStore/appsettings.json
+++ b/FoodStore/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAFTOP;Database=FoodStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=LAFTOP;Database=FoodStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "FoodStoreDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FoodStore;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
