--- a/FoodStore.ViewModels/FoodStore.ViewModels.csproj
+++ b/FoodStore.ViewModels/FoodStore.ViewModels.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.15" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.15" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\FoodStore.GCommon\FoodStore.GCommon.csproj" />
   </ItemGroup>
 
