--- a/FoodStore.Tests/FoodStore.Tests.csproj
+++ b/FoodStore.Tests/FoodStore.Tests.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\FoodStore.Data\FoodStore.Data.csproj" />
     <ProjectReference Include="..\FoodStore.Services.Core\FoodStore.Services.Core.csproj" />
     <ProjectReference Include="..\FoodStore.ViewModels\FoodStore.ViewModels.csproj" />
+    <ProjectReference Include="..\FoodStore\FoodStore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
