Revised fix GCommon project

--- a/FoodStore.Data.Models/FoodStore.Data.Models.csproj
+++ b/FoodStore.Data.Models/FoodStore.Data.Models.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\FoodStore.GCommon\FoodStore.GCommon.csproj" />
+    <ProjectReference Include="..\FoodStore.GCommon\FoodStore.GCommon.csproj" />
   </ItemGroup>
 
 </Project>
