--- a/FoodStore.Data/FoodStore.Data.csproj
+++ b/FoodStore.Data/FoodStore.Data.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\FoodStore.GCommon\FoodStore.GCommon.csproj" />
     <ProjectReference Include="..\FoodStore.Data.Models\FoodStore.Data.Models.csproj" />
+    <ProjectReference Include="..\FoodStore.GCommon\FoodStore.GCommon.csproj" />
   </ItemGroup>
 
 </Project>
