--- a/FoodStore.Tests/FoodStore.Tests.csproj
+++ b/FoodStore.Tests/FoodStore.Tests.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FoodStore.Data.Models\FoodStore.Data.Models.csproj" />
     <ProjectReference Include="..\FoodStore.Data\FoodStore.Data.csproj" />
+    <ProjectReference Include="..\FoodStore.GCommon\FoodStore.GCommon.csproj" />
     <ProjectReference Include="..\FoodStore.Services.Core\FoodStore.Services.Core.csproj" />
     <ProjectReference Include="..\FoodStore.ViewModels\FoodStore.ViewModels.csproj" />
     <ProjectReference Include="..\FoodStore\FoodStore.csproj" />
