--- a/FoodStore.ViewModels/FoodStore.ViewModels.csproj
+++ b/FoodStore.ViewModels/FoodStore.ViewModels.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\FoodStore.GCommon\FoodStore.GCommon.csproj" />
+    <ProjectReference Include="..\FoodStore.GCommon\FoodStore.GCommon.csproj" />
   </ItemGroup>
 
 </Project>
